@@ -216,12 +216,6 @@ Qo_min_max = float_list(default=None)
 max_freq_Er = float(default=None)
 # -------- RADIATED-ENERGY PARAMETERS
 
-# POST-PROCESSING PARAMETERS --------
-# Min and max acceptable corner frequencies (Hz)
-min_corner_freq = float(default=0.5)
-max_corner_freq = float(default=40.)
-# -------- POST-PROCESSING PARAMETERS
-
 
 # LOCAL MAGNITUDE PARAMETERS --------
 compute_local_magnitude = boolean(default=False)
